Fix spacing (again)

--- a/src/main.css
+++ b/src/main.css
@@ -190,7 +190,6 @@ body {
 
 .section-content {
     max-width: 1080px;
-    margin-bottom: 4rem;
 }
 
 .section-title {
